Add withdraw api and test
