# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\FinancialReportController;
 use App\Http\Controllers\OrderController;
 use App\Http\Controllers\TransactionController;
+use App\Http\Controllers\WalletController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/orders', [OrderController::class, 'store'])->name('orders.store');
@@ -13,3 +14,5 @@ Route::get('/financial-reports', [FinancialReportController::class, 'index'])->n
 Route::get('/financial-reports/chart', [FinancialReportController::class, 'chart'])->name('financial-reports.chart');
 
 Route::get('/transactions', [TransactionController::class, 'index'])->name('transactions.index');
+
+Route::post('/wallets/withdraw', [WalletController::class, 'withdraw'])->name('wallets.withdraw');
